force-app/main/default/objects/Krow__Task__c/fields/Krow__Parent_Track__c.field-meta.xml
<CustomField>
    <fullName>Krow__Parent_Track__c</fullName>
    <description>A system generated field for parent task tracking.</description>
    <inlineHelpText>A system generated field for parent task tracking.</inlineHelpText>
    <label>Parent Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>