force-app/main/default/objects/Krow__Task__c/fields/Krow__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Krow__Percent_Complete__c</fullName>
    <description>The percentage complete of the task, either manually entered or automatically calculated from sub-task or checklist completion.</description>
    <inlineHelpText>The percentage complete of the task, either manually entered or automatically calculated from sub-task or checklist completion.</inlineHelpText>
    <label>% Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>