force-app/main/default/objects/Krow__Task__c/fields/Krow__Planned_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Due_Date__c</fullName>
    <description>The Planned Due Date for this Task as set when the Project Baseline is created.</description>
    <label>Planned Due Date</label>
    <type>Date</type>
</CustomField>