force-app/main/default/objects/Krow__Task__c/fields/Krow__Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Hours__c</fullName>
    <description>The Total Task Schedule Hours for this task.</description>
    <inlineHelpText>The Total Task Schedule Hours for this task.</inlineHelpText>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>