force-app/main/default/objects/Krow__Task__c/fields/Krow__Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Planned_Start_Date__c</fullName>
    <description>The Planned Start Date for this Task as set when the Project Baseline is created.</description>
    <inlineHelpText>The Planned Start Date for this Task as set when the Project Baseline is created.</inlineHelpText>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>