force-app/main/default/objects/Krow__Task__c/fields/Krow__Predecessor__c.field-meta.xml
<CustomField>
    <fullName>Krow__Predecessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The predecessor task for this task as set.</description>
    <inlineHelpText>The predecessor task for this task as set.</inlineHelpText>
    <label>Deprecated</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Task__c.Krow__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Krow__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>Krow__Task__c.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Tasks (Predecessor)</relationshipLabel>
    <relationshipName>Predecessor_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>