force-app/main/default/objects/Krow__Task__c/fields/Krow__Predecessor_Tasks_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Predecessor_Tasks_Name__c</fullName>
    <label>Predecessor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>