force-app/main/default/objects/Krow__Task__c/fields/Krow__Priority__c.field-meta.xml
<CustomField>
    <fullName>Krow__Priority__c</fullName>
    <description>A priority for this task as selected.</description>
    <inlineHelpText>A priority for this task as selected.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>