force-app/main/default/objects/Krow__Task__c/fields/Krow__Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The associated Project for this Task as derived from the Project.</description>
    <inlineHelpText>The associated Project for this Task as derived from the Project.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Klient Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>