force-app/main/default/objects/Krow__Task__c/fields/Krow__Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current assigned Project Owner for this Project Task.</description>
    <inlineHelpText>The current assigned Project Owner for this Project Task.</inlineHelpText>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Krow_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>