force-app/main/default/objects/Krow__Task__c/fields/Krow__Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Phase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically checked if this task represent a parent task in a parent-child task relationship.  This field should not be manually set.</description>
    <inlineHelpText>Automatically checked if this task represent a parent task in a parent-child task relationship.  This field should not be manually set.</inlineHelpText>
    <label>Project Phase</label>
    <type>Checkbox</type>
</CustomField>