force-app/main/default/objects/Krow__Task__c/fields/Krow__Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Status__c</fullName>
    <formula>TEXT(Krow__Project__r.Krow__Project_Status__c)</formula>
    <label>Project Status</label>
    <type>Text</type>
</CustomField>