force-app/main/default/objects/Krow__Task__c/fields/Krow__Project_Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Krow__Project_Task_Order__c</fullName>
    <description>Automatically generated task order as displayed on the Project task view and Gantt view.</description>
    <inlineHelpText>Automatically generated task order as displayed on the Project task view and Gantt view.</inlineHelpText>
    <label>Project Task Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>