force-app/main/default/objects/Krow__Task__c/fields/Krow__Related_To__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To__c</fullName>
    <description>Automatically set link if this task is related to another object.</description>
    <formula>HYPERLINK( IF( 
CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
&apos;https://&apos;+ MID($Api.Partner_Server_URL_260, 14, (FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-14)) +&apos;salesforce.com/&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) 
) &amp; 
IF( 
NOT(ISBLANK(Krow__Related_To_ID__c)), Krow__Related_To_ID__c, &apos;&apos; 
) , Krow__Related_To_Name__c, &apos;Self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically set link if this task is related to another object.</inlineHelpText>
    <label>Related To</label>
    <type>Text</type>
</CustomField>