force-app/main/default/objects/Krow__Task__c/fields/Krow__Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To_ID__c</fullName>
    <description>Automatically generated ID of related record if set.</description>
    <inlineHelpText>Automatically generated ID of related record if set.</inlineHelpText>
    <label>Related To ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>