force-app/main/default/objects/Krow__Task__c/fields/Krow__Related_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Related_To_Name__c</fullName>
    <description>Automatically generated name of related record if set.</description>
    <inlineHelpText>Automatically generated name of related record if set.</inlineHelpText>
    <label>Related To Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>