force-app/main/default/objects/Krow__Task__c/fields/Krow__Relative_Start_Days__c.field-meta.xml
<CustomField>
    <fullName>Krow__Relative_Start_Days__c</fullName>
    <description>Used only during project creation from a template.  Here you can set a relative number of days from the project start date this task should start (task start date) when the project is created.</description>
    <inlineHelpText>Used only during project creation from a template.  Here you can set a relative number of days from the project start date this task should start (task start date) when the project is created.</inlineHelpText>
    <label>Relative Start Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>