force-app/main/default/objects/Krow__Task__c/fields/Krow__Role__c.field-meta.xml
<CustomField>
    <fullName>Krow__Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Role for this task as entered. Used when filtering resources by Role/Skill.</description>
    <inlineHelpText>Associated Role for this task as entered. Used when filtering resources by Role/Skill.</inlineHelpText>
    <label>Role</label>
    <referenceTo>Krow__Krow_Role__c</referenceTo>
    <relationshipLabel>Klient Tasks</relationshipLabel>
    <relationshipName>Krow_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>