force-app/main/default/objects/Krow__Task__c/fields/Krow__Root__c.field-meta.xml
<CustomField>
    <fullName>Krow__Root__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System generated field, should not be manually entered.</description>
    <inlineHelpText>System generated field, should not be manually entered.</inlineHelpText>
    <label>Root</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Klient Tasks (Root)</relationshipLabel>
    <relationshipName>Root_Task</relationshipName>
    <type>Lookup</type>
</CustomField>