force-app/main/default/objects/Krow__Task__c/fields/Krow__Schedule_All_Resource__c.field-meta.xml
<CustomField>
    <fullName>Krow__Schedule_All_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked during task creation,  all resources assigned the task during task creation will be assigned the full Estimated Hours on the Task.</description>
    <inlineHelpText>Default: Checked</inlineHelpText>
    <label>Schedule All Resource</label>
    <type>Checkbox</type>
</CustomField>