force-app/main/default/objects/Krow__Task__c/fields/Krow__Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduled_Hours__c</fullName>
    <description>Represents the Sum of all Task Assignment Hours for All Resources assigned this task.</description>
    <inlineHelpText>Represents the Sum of all Task Assignment Hours for All Resources assigned this task.</inlineHelpText>
    <label>Scheduled Hours</label>
    <summarizedField>Krow__Task_Assignment__c.Krow__Hour__c</summarizedField>
    <summaryForeignKey>Krow__Task_Assignment__c.Krow__Krow_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>