force-app/main/default/objects/Krow__Task__c/fields/Krow__Scheduling_Mode__c.field-meta.xml
<CustomField>
    <fullName>Krow__Scheduling_Mode__c</fullName>
    <description>Represents the Scheduling Mode for this Task (Normal/Fixed Duration, Fixed Effort).  The default mode is &quot;Normal&quot;, unless set as a different default mode on the Project.</description>
    <inlineHelpText>Default: Fixed Duration</inlineHelpText>
    <label>Scheduling Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Fixed Effort</fullName>
            </value>
            <value>
                <fullName>Fixed Duration</fullName>
                <default>true</default>
                <label>Fixed Duration</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>