force-app/main/default/objects/Krow__Task__c/fields/Krow__Section__c.field-meta.xml
<CustomField>
    <fullName>Krow__Section__c</fullName>
    <description>The Project Section associated to this Task as appears on the project task page.</description>
    <inlineHelpText>The Project Section associated to this Task as appears on the project task page.</inlineHelpText>
    <label>Section</label>
    <length>250</length>
    <type>Text</type>
</CustomField>