force-app/main/default/objects/Krow__Task__c/fields/Krow__Send_to_AccountingSeed__c.field-meta.xml
<CustomField>
    <fullName>Krow__Send_to_AccountingSeed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send to AccountingSeed</description>
    <label>Deprecated</label>
    <type>Checkbox</type>
</CustomField>