force-app/main/default/objects/Krow__Task__c/fields/Krow__SFDC_TaskId__c.field-meta.xml
<CustomField>
    <fullName>Krow__SFDC_TaskId__c</fullName>
    <description>Represents the ID of the Salesforce Task if the custom setting to sync Salesforce Tasks with Klient Tasks is selected.</description>
    <inlineHelpText>Represents the ID of the Salesforce Task if the custom setting to sync Salesforce Tasks with Krow Tasks is selected.</inlineHelpText>
    <label>SFDC_TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>