force-app/main/default/objects/Krow__Task__c/fields/Krow__Split_Across_Team__c.field-meta.xml
<CustomField>
    <fullName>Krow__Split_Across_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, during Task Creation, the Estimated Hours on the task will be split evenly among all resources assigned to the task during creation.</description>
    <inlineHelpText>Default: Unchecked</inlineHelpText>
    <label>Split Across Team</label>
    <type>Checkbox</type>
</CustomField>