force-app/main/default/objects/Krow__Task__c/fields/Krow__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Start_Date__c</fullName>
    <description>The designated Task Start Date as entered or calculated from auto-scheduling on the Gantt.</description>
    <inlineHelpText>The designated Task Start Date as entered or calculated from auto-scheduling on the Gantt.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>