force-app/main/default/objects/Krow__Task__c/fields/Krow__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Krow__Start_Time__c</fullName>
    <description>The designated Start Time for this task as entered.</description>
    <inlineHelpText>The designated Start Time for this task as entered.</inlineHelpText>
    <label>Start Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>