force-app/main/default/objects/Krow__Task__c/fields/Krow__Status__c.field-meta.xml
<CustomField>
    <fullName>Krow__Status__c</fullName>
    <description>The status of this task as entered or selected.</description>
    <inlineHelpText>The status of this task as entered or selected.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>