force-app/main/default/objects/Krow__Task__c/fields/Krow__Sub_Tasks_Scheduled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sub_Tasks_Scheduled_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sub Tasks Scheduled Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>