force-app/main/default/objects/Krow__Task__c/fields/Krow__Sub_Tasks_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sub_Tasks_Total_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The sum of total approved timesheet hours including sub-tasks.</description>
    <inlineHelpText>The sum of total approved timesheet hours including sub-tasks.</inlineHelpText>
    <label>Sub-Tasks Total Hours (Approved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>