force-app/main/default/objects/Krow__Task__c/fields/Krow__Sync_Result__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sync_Result__c</fullName>
    <description>Used to display integration status to various systems such as financial systems.</description>
    <inlineHelpText>Used to display integration status to various systems such as financial systems.</inlineHelpText>
    <label>Sync Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>