force-app/main/default/objects/Krow__Task__c/fields/Krow__Task_Constraint_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Constraint_Date__c</fullName>
    <label>Task Constraint Date</label>
    <type>DateTime</type>
</CustomField>