force-app/main/default/objects/Krow__Task__c/fields/Krow__Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Due_Date__c</fullName>
    <description>A calculated date/time field representing the Task Due Date.</description>
    <inlineHelpText>A calculated date/time field representing the Task Due Date.</inlineHelpText>
    <label>Task Due Date</label>
    <type>DateTime</type>
</CustomField>