force-app/main/default/objects/Krow__Task__c/fields/Krow__Task_Rate__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Rate__c</fullName>
    <description>A Task Bill Rate that is used as the Bill Rate for this task when time is entered against this task -  this rate represents an override rate from the resources bill rate.</description>
    <inlineHelpText>A Task Bill Rate that is used as the Bill Rate for this task when time is entered against this task -  this rate represents an override rate from the resources bill rate.</inlineHelpText>
    <label>Task Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>