force-app/main/default/objects/Krow__Task__c/fields/Krow__Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Task_Type__c</fullName>
    <description>A designation of the type of task as entered.</description>
    <inlineHelpText>A designation of the type of task as entered.</inlineHelpText>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>