force-app/main/default/objects/Krow__Task__c/fields/Krow__Template_Project__c.field-meta.xml
<CustomField>
    <fullName>Krow__Template_Project__c</fullName>
    <formula>OR(Krow__Project__r.Krow__Project_Template__c, Krow__Project__r.Krow__Public_Project_Template__c , Krow__Project__r.Krow__Task_Template__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Project</label>
    <type>Checkbox</type>
</CustomField>