force-app/main/default/objects/Krow__Task__c/fields/Krow__Template_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Template_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Represents this task as a template task associated to a template project.</description>
    <inlineHelpText>Represents this task as a template task associated to a template project.</inlineHelpText>
    <label>Template Task</label>
    <referenceTo>Krow__Task__c</referenceTo>
    <relationshipLabel>Template Tasks</relationshipLabel>
    <relationshipName>Template_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>