force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Billable_Amount_Incl_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Amount_Incl_Sub_Tasks__c</fullName>
    <description>The Total Billable Amount from Approved Timesheets for this Task including Sub-Tasks.</description>
    <formula>Krow__Total_Billable_Amount__c  +  Krow__Total_Billable_Amount_Sub_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Billable Amount from Approved Timesheets for this Task including Sub-Tasks.</inlineHelpText>
    <label>Total Billable Amount (Incl Sub-Tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>