force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Billable_Hours_including_sub_tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Hours_including_sub_tasks__c</fullName>
    <description>The Total Billable Hour from Approved Timesheets for this Task including Sub-Tasks.</description>
    <formula>Krow__Total_Billable_Hours_Sub_Tasks__c + Krow__Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Billable Hour from Approved Timesheets for this Task including Sub-Tasks.</inlineHelpText>
    <label>Total Billable Hours (Incl Sub-Tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>