force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Billable_Hours_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Billable_Hours_Sub_Tasks__c</fullName>
    <description>The Total Billable Hour from Approved Timesheets for Sub-Tasks to this Task.</description>
    <inlineHelpText>The Total Billable Hour from Approved Timesheets for Sub-Tasks to this Task.</inlineHelpText>
    <label>Total Billable Hours Sub Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>