force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Cost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Cost_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total Cost Amount for this Task.</description>
    <inlineHelpText>The Total Cost Amount for this Task.</inlineHelpText>
    <label>Total Cost Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>