force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Cost_Amount_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Cost_Amount_Sub_Tasks__c</fullName>
    <description>The Total Cost Amount for this Tasks Sub-Tasks.</description>
    <inlineHelpText>The Total Cost Amount for this Tasks Sub-Tasks.</inlineHelpText>
    <label>Total Cost Amount (Sub-Tasks)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>