force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Duration__c</fullName>
    <description>The calculated total task duration for this task.</description>
    <inlineHelpText>The calculated total task duration for this task.</inlineHelpText>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>