force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Estimated_Hours_From_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Estimated_Hours_From_Sub_Tasks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total Estimated Hours from Sub-tasks for this task.</description>
    <inlineHelpText>The Total Estimated Hours from Sub-tasks for this task.</inlineHelpText>
    <label>Total Estimated Hours From Sub-Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>