force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Estimated_Hours_Including_Sub_Task__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Estimated_Hours_Including_Sub_Task__c</fullName>
    <description>The Total Estimated Hours for this Task including Sub-tasks.</description>
    <formula>Krow__Estimated_Hours__c + Krow__Total_Estimated_Hours_From_Sub_Tasks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Estimated Hours for this Task including Sub-tasks.</inlineHelpText>
    <label>Total Estimated Hours Including Sub-Task</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>