force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours__c</fullName>
    <description>The sum of Approved Billable + Non-Billable Hours from Timesheets.</description>
    <formula>Krow__Billable_Hours__c + Krow__Non_Billable_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of Approved Billable + Non-Billable Hours from Timesheets.</inlineHelpText>
    <label>Total Approved Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>