force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Hours_Including_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Including_Sub_Tasks__c</fullName>
    <description>The sum of Approved Billable + Non-Billable Hours from Timesheets including sub-tasks.</description>
    <formula>Krow__Total_Hours__c + Krow__Sub_Tasks_Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of Approved Billable + Non-Billable Hours from Timesheets including sub-tasks.</inlineHelpText>
    <label>Total Approved Hours Including Sub-Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>