force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Hours_Logged__c</fullName>
    <description>The Total Timesheet Hours saved against this task.</description>
    <inlineHelpText>The Total Timesheet Hours saved against this task.</inlineHelpText>
    <label>Total Hours (Logged)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>