force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Logged_Hours_Including_Sub_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Logged_Hours_Including_Sub_Tasks__c</fullName>
    <description>The Total Timesheet Hours saved against this task including Sub-Tasks.</description>
    <formula>Krow__Sub_Tasks_Total_Logged_Hours__c +  Krow__Total_Hours_Logged__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Total Timesheet Hours saved against this task including Sub-Tasks.</inlineHelpText>
    <label>Total Logged Hours Including Sub-Tasks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>