force-app/main/default/objects/Krow__Task__c/fields/Krow__Total_Non_Billable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Krow__Total_Non_Billable_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Total Non-Billable Amount for this Task from Approved Timesheets.</description>
    <inlineHelpText>The Total Non-Billable Amount for this Task from Approved Timesheets.</inlineHelpText>
    <label>Total Non-Billable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>